# drf-base

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.local.yml  docker-compose.prod.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django
.envs/.prod.example/: .django  .postgres
compose/local/django/: Dockerfile
compose/prod/django/: Dockerfile  start
compose/prod/postgres/: Dockerfile
compose/prod/traefik/: Dockerfile  traefik.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py  test.py
myapp/auth/: apps.py  urls.py
myapp/core/: admin.py  models.py  urls.py  views.py
myapp/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
myapp/users/migrations/: 0001_initial.py
myapp/users/tests/: factories.py  test_permission.py  test_validation.py
tests/: conftest.py  factory.py  test_health.py  test_users.py  utils.py
